@@ -2,6 +2,7 @@ xboxdrv 0.8.1 - (??/Jun/2011)
 =============================
 
 * fixed problems with rumble messages getting delayed
+* added support for an unlimited number shift keys
 
 
 xboxdrv 0.8.0 - (26/May/2011)
